@@ -1,7 +1,6 @@
 package ru.yandex.practicum.processor;
 
 import com.fasterxml.jackson.databind.deser.std.StringDeserializer;
-import ru.practicum.deserializer.HubEventAvroDeserializer;
 import lombok.RequiredArgsConstructor;
 import org.apache.avro.specific.SpecificRecordBase;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
@@ -10,12 +9,13 @@ import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
+import ru.practicum.deserializer.HubEventAvroDeserializer;
 import ru.yandex.practicum.kafka.telemetry.event.HubEventAvro;
 import ru.yandex.practicum.service.HubEvent;
 import ru.yandex.practicum.service.HubEventService;
 
 import java.time.Duration;
-import java.util.List;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Properties;
 
@@ -27,11 +27,14 @@ public class HubEventProcessor implements Runnable {
     private String topic;
 
     HubEvent hubEvent;
+    private KafkaConsumer<String, SpecificRecordBase> consumer;
 
     @Override
     public void run() {
-        try (KafkaConsumer<String, SpecificRecordBase> consumer = new KafkaConsumer<>(getConsumerProperties())) {
-            consumer.subscribe(List.of(topic));
+        try {
+
+            consumer = new KafkaConsumer<>(getConsumerProperties());
+            consumer.subscribe(Collections.singletonList(topic));
 
             Runtime.getRuntime().addShutdownHook(new Thread(consumer::wakeup));
 
@@ -51,8 +54,12 @@ public class HubEventProcessor implements Runnable {
                 }
                 consumer.commitSync();
             }
-        } catch (Exception ignored) {
-
+        } finally {
+            try {
+                consumer.commitSync();
+            } finally {
+                consumer.close();
+            }
         }
     }
 
